--- a/IngredientViewCell.xib
+++ b/IngredientViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -7,14 +7,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TSPAddIngredientViewController"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell autoresizesSubviews="NO" opaque="NO" multipleTouchEnabled="YES" contentMode="redraw" reuseIdentifier="ItemView" id="h5v-9u-NPh" customClass="IngredientCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="220" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" reuseIdentifier="ItemView" id="h5v-9u-NPh" customClass="IngredientCollectionViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="130" height="37"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="220" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="130" height="37"/>
                 <subviews>
+                    <label autoresizesSubviews="NO" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jvC-q5-pZq">
+                        <rect key="frame" x="35" y="10" width="85" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="6XW-Rp-Lhd"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="90" id="I01-39-neM"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAJ-9b-cu3">
-                        <rect key="frame" x="0.0" y="10" width="30" height="30"/>
+                        <rect key="frame" x="5" y="4" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="2RJ-J6-7qS"/>
                             <constraint firstAttribute="height" constant="30" id="iHy-km-mze"/>
@@ -23,37 +33,34 @@
                             <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="jvC-q5-pZq">
-                        <rect key="frame" x="38" y="10" width="182" height="30"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="OAJ-9b-cu3" firstAttribute="top" secondItem="h5v-9u-NPh" secondAttribute="top" constant="10" id="0ys-EE-sfr"/>
-                <constraint firstItem="jvC-q5-pZq" firstAttribute="leading" secondItem="OAJ-9b-cu3" secondAttribute="trailing" constant="8" id="33O-pt-dk5"/>
-                <constraint firstItem="OAJ-9b-cu3" firstAttribute="leading" secondItem="h5v-9u-NPh" secondAttribute="leading" id="4bg-DI-vcQ"/>
-                <constraint firstItem="jvC-q5-pZq" firstAttribute="top" secondItem="h5v-9u-NPh" secondAttribute="top" constant="10" id="5OF-UK-jaT"/>
-                <constraint firstAttribute="centerY" secondItem="jvC-q5-pZq" secondAttribute="centerY" id="LKb-OD-gp2"/>
-                <constraint firstAttribute="centerY" secondItem="OAJ-9b-cu3" secondAttribute="centerY" id="PSL-A1-bYV"/>
-                <constraint firstAttribute="bottom" secondItem="jvC-q5-pZq" secondAttribute="bottom" constant="10" id="SMU-Fw-FQy"/>
-                <constraint firstAttribute="bottom" secondItem="OAJ-9b-cu3" secondAttribute="bottom" constant="10" id="fhp-Va-VQV"/>
-                <constraint firstAttribute="trailing" secondItem="jvC-q5-pZq" secondAttribute="trailing" id="sGi-YL-P1O"/>
-                <constraint firstAttribute="centerY" secondItem="jvC-q5-pZq" secondAttribute="centerY" id="yEB-2b-S7K"/>
+                <constraint firstItem="OAJ-9b-cu3" firstAttribute="top" secondItem="h5v-9u-NPh" secondAttribute="top" constant="4" id="0ys-EE-sfr"/>
+                <constraint firstAttribute="centerY" secondItem="OAJ-9b-cu3" secondAttribute="centerY" id="2xS-7u-rjc"/>
+                <constraint firstItem="OAJ-9b-cu3" firstAttribute="leading" secondItem="h5v-9u-NPh" secondAttribute="leading" constant="5" id="4bg-DI-vcQ"/>
+                <constraint firstItem="jvC-q5-pZq" firstAttribute="top" secondItem="h5v-9u-NPh" secondAttribute="top" constant="10" id="6WV-in-x1J"/>
+                <constraint firstAttribute="bottom" secondItem="jvC-q5-pZq" secondAttribute="bottom" constant="10" id="J7M-0C-loS"/>
+                <constraint firstItem="jvC-q5-pZq" firstAttribute="leading" secondItem="OAJ-9b-cu3" secondAttribute="trailing" id="ctT-w7-XZI"/>
+                <constraint firstAttribute="centerY" secondItem="jvC-q5-pZq" secondAttribute="centerY" id="jcP-TK-guA"/>
+                <constraint firstAttribute="trailing" secondItem="jvC-q5-pZq" secondAttribute="trailing" constant="10" id="pwu-6w-45M"/>
             </constraints>
-            <size key="customSize" width="220" height="6"/>
+            <size key="customSize" width="220" height="-7"/>
             <connections>
                 <outlet property="ingredientLabel" destination="jvC-q5-pZq" id="q94-A1-ahu"/>
                 <outlet property="removeIngredientButton" destination="OAJ-9b-cu3" id="F0R-v8-l11"/>
             </connections>
-            <point key="canvasLocation" x="358" y="334"/>
+            <point key="canvasLocation" x="358" y="327.5"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="x.png" width="256" height="256"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
